--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  crypto: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
