--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   crypto: ^3.0.1
+  flutter_easyloading: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
